tests/res/nullability/field_nullable_rejected.say
// A nullable value cannot be assigned into a non-null field.
type T {
    pub value;
    init(p?) {
        this.value = p; // error: Cannot assign a nullable value to non-null field 'value'
    }
}
